--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Hotel Management - Home</title>
-</head>
-<body>
-  <h1>Hotel Management System (FE Test)</h1>
-  <ul>
-    <li><a href="auth/register.html">Register</a></li>
-    <li><a href="auth/login.html">Login</a></li>
-    <li><a href="booking/create.html">Create Booking</a></li>
-    <li><a href="booking/my-bookings.html">My Bookings</a></li>
-  </ul>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>frontend</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
